<resources>
    <string name="app_name">Flyer</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="i_agree_to_the_terms_and_condition">I_agree_to_the_terms_and_condition</string>
    <string name="login_small">Login</string>
    <string name="TC">I agree to terms and conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_btn">REGISTER</string>
    <string name="please_wait">Please Wait…</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="enter_your_email_registered_address_we_will_send_you_an_email_to_reset_your_password">Enter your registered email address. We will send you an email to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_your_password">Need a new password ?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="binary">BINARY</string>
    <string name="err_msg_mobile_number">Please enter your mobile number</string>
    <string name="yellow_background">yellow_background</string>
    <string name="non_binary">NON-BINARY</string>
    <string name="save">SAVE</string>
    <string name="todo">TODO</string>
    <string name="wave">wave</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="complete_your_profile_2">COMPLETE YOUR PROFILE</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
    <string name="msg_profile_update_success">Your profile has been updated successfully</string>

    <!--    <string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_products">My Products</string>
    <string name="title_orders">Orders</string>
    <string name="settings">settings</string>
    <string name="settingsCaps">SETTINGS</string>
    <string name="image" />
    <string name="set">Settings</string>
    <string name="welcome_to_settings">Welcome to settings</string>
    <string name="address">Address</string>
    <string name="selectAddress">selectAddress</string>
    <string name="logout">LOGOUT</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="settingsIcon" />
    <string name="action_add_product">action_add_product</string>
    <string name="product_header_icon">Product_header_icon</string>
    <string name="got_an_amazing_product">GOT AN AMAZING PRODUCT ?</string>
    <string name="icon_product">icon_product</string>
    <string name="update_product">update_product</string>
    <string name="product_image">product_image</string>

    <string name="product_image_content">Product_image</string>
    <string name="add_update_product_image">add_update_product_image</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="product_description">Product description</string>
    <string name="product_quantity">Product quantity</string>
    <string name="shop_on">© Shop On</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_added_yet">No product added yet !</string>
    <string name="guitar">Guitar</string>
    <string name="state_of_the_art_blues_guitar">State of the art blues guitar</string>
    <string name="_2300">₹ 2300</string>
    <string name="no_dashboard_item_found">No items found !</string>
    <string name="converse_shoes">Converse Shoes</string>
    <string name="_225">$ 225</string>
    <string name="delete_button">delete button</string>
    <string name="rs_2500">Rs. 2500</string>
    <string name="tap_to_know_more">TAP TO KNOW MORE</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="rs_250">Rs. 250</string>
    <string name="title">title</string>
    <string name="what_is_it"><![CDATA[WHAT IS IT ->]]></string>
    <string name="stock_quantity"><![CDATA[STOCK QUANTITY ->]]></string>
    <string name="how_much_is_it"><![CDATA[HOW MUCH IS IT ->]]></string>
    <string name="a_beautiful_item_to_have_makes_life_easy">Large 40 L Laptop Backpack unisex backpack with rain cover and reflective strip  </string>
    <string name="hello">hello</string>
    <string name="electronics">MATHS</string>
    <string name="furniture">FURNITURE</string>
    <string name="sports">COMMERCE</string>
    <string name="apparels">SCIENCE</string>
    <string name="search_data">Search Products</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="stationery">ENGLISH</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="no_items_found_in_cart">No items found in cart !</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart">Cart</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>

    <string name="updateProduct">UPDATE YOUR PRODUCT</string>
    <string name="edit_btn">edit</string>
    <string name="subtract">subtract</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="no_address_found">No address found !</string>
    <string name="full_name">Full name</string>
    <string name="address_">Address</string>
    <string name="additional_note">Additional Note</string>
    <string name="home">HOME</string>
    <string name="office">OFFICE</string>
    <string name="other">OTHER</string>
    <string name="phone_number">Phone number</string>
    <string name="zip_code">Zip code</string>
    <string name="other_details">Other details</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="err_your_address_deleted_successfully">Address Deleted successfully</string>
    <string name="type_text">Type Text</string>
    <string name="select_address">SELECT ADDRESS</string>
    <string name="place_order">PlACE ORDER</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="product_items">Product Items</string>
    <string name="selected_address">Selected Address</string>
    <string name="item_receipt">Item Receipt</string>

    <string name="shipping_charge">Shipping Charge</string>
    <string name="_10_0">$10.0</string>
    <string name="all_items">ALL ITEMS</string>
    <string name="no_orders_placed_yet">No orders placed yet !</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="pending">Pending</string>
    <string name="order_status">Order Status</string>
    <string name="shipping_address_one">Shipping Address</string>
    <string name="sold_products">Sold Products</string>
    <string name="no_products_sold_yet">No products sold yet !</string>


    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <!--TODO Step 4: Add the string resources to the strings.xml file.-->
    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="nothingFound">No product found</string>


</resources>