<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:background="@drawable/ll_three">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_item_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintHorizontal_bias="0.56"
                />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.example.shopperista.utils.CustomTextViewStyleBold
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:text="@string/converse_shoes"/>

                <com.example.shopperista.utils.CustomTextViewStyle
                    android:id="@+id/tv_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/_225"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_edit_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vector_edit_two"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="1.5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_btn" />

            <ImageButton
                android:id="@+id/ib_delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vector_delete"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_button"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>